public_src/css/style.scss
@import '_flex';
@mixin landscape {
  @media (orientation: landscape) {
    @content;
  }
}
@mixin desktop {
  @media (min-width: 768px) {
    @content;
  }
}
* {
  box-sizing: border-box;
  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol"; // System Fonts as used by GitHub
}
body {
  margin: 0;
  padding: 0;
  background-color: #f9f9f9;
  color: #3f3f3f;
}
header {
  background-color: #f4f4f4;
  padding: 16px;
  border-bottom: 1px solid #eeeeee;
}
div.main {
  padding: 16px;
}
input[type=search] {
  font-size: 16px; // Avoids zooming on iOS Safari
  padding: 8px 12px;
  border-radius: 999px;
  color: #3f3f3f;
  border: 1px solid #aaaaaa;
  width: 100%;
}
a {
  color: #3f3f3f;
}
p {
  margin: 0 0 16px 0;
}
h1, h2 {
  color: #242424;
  font-weight: 600;
  margin: 0 0 16px 0;
}
ul {
  list-style: none;
  border: 0;
  padding: 0;
  margin: -5px -5px 16px -5px;
  @include flexbox;
  @include flex-wrap(wrap);
  li {
    @include flex-grow(0);
    @include flex-shrink(0);
    @include flex-basis(calc(50% - 5px - 5px)); // 2 per row
    @include landscape {
      @include flex-basis(calc(25% - 5px - 5px)); // 4 per row
    }
    border-radius: 5px;
    background-color: #ffffff;
    box-shadow: 1px 1px 5px rgba(128, 128, 128, 0.25);
    font-weight: 600;
    margin: 5px;
    padding: 5px;
    font-size: 10pt;
    line-height: 1.1;
    @include desktop {
      padding: 10px;
      font-size: 11pt;
      line-height: 1.3;
    }
    a {
      text-decoration: none;
      img {
        width: 100%;
        height: auto;
      }
    }
  }
}

